--- a/app.json
+++ b/app.json
@@ -1,8 +1,5 @@
 {
   "name": "Clearbit sample",
   "description": "A Clearbit app using Sinatra",
-  "repository": "https://github.com/clearbit/clearbit-sinatra",
-  "addons": [
-    "clearbit"
-  ]
+  "repository": "https://github.com/clearbit/clearbit-sinatra"
 }
